# ba-thesis

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
src/data/: data.txt  initial_training_data.txt
src/data/.ipynb_checkpoints/: data-checkpoint.txt
src/data/experiment_1/: data.txt
src/data/experiment_3/: initial_training_data.txt
src/data/experiment_4/: initial_training_data.txt
src/data/experiment_5/: initial_training_data.txt
src/deprecated/: DSDM.ipynb  DSDM_simplified.ipynb  DSDM_weighted_sup.ipynb  DSDM_weights.ipynb  README.md  Untitled.ipynb  VSA.ipynb  experiment-1.ipynb  hypervector_experiments.ipynb
src/deprecated/models/: positional.py
src/experiments/: construct_subsequences.ipynb  dataset_statistics.ipynb  experiment_sliding_window.ipynb  experiment_template.ipynb  experiment_transformer_sequences.ipynb  experiment_wikipedia.ipynb  run_experiment.sh  test_memory-20.ipynb  test_memory.ipynb  test_memory_template.ipynb  train_SWNmemory.py  train_memory.py  visualize_attention.ipynb  visualize_memory.ipynb
src/experiments/configs/: experiment-1.yaml  experiment-2.yaml  experiment-3.yaml  experiment-4.yaml  experiment-5.yaml
src/experiments/results/: run_experiment-1.html  run_experiment-3.html  run_experiment-4.html  (+1 more)
src/lib/: DSDM.ipynb  DSDM.py  DSDM_simplified.ipynb  DSDM_weighted_sup.ipynb  DSDM_weights.ipynb  preprocess.py
src/normalization-experiments/: README.md  experiment_template.ipynb  run_experiment.sh
src/simple-pipeline/: main.py
src/vsa/: DSDM.ipynb  VSA.ipynb
tests/: test-simple-pipeline.py
(+26 files in other folders)
