[tool.poetry]
name = "ba-thesis"
version = "0.1.0"
description = ""
authors = ["Daniela Fichiu <danielafichiu@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
plotly = "^5.14.0"
pandas = "^1.5.3"
scikit-learn = "^1.2.2"
nltk = "^3.8.1"
torch-hd = "^5.1.0"
jupyter = "^1.0.0"
tensorflow = "^2.12.0"
torch = "^2.0.0"
lab = "^7.3"
ipykernel = "^6.23.1"
torchvision = "^0.15.2"
better-abc = "^0.0.3"
nbconvert = "^7.6.0"
papermill = "^2.4.0"
jupyterlab = "^4.0.2"
seaborn = "^0.12.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
